--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -7,6 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>order_list > 주문리스트페이지</title>
 
+    <!-- <img src="none" style="cursor: pointer;" alt=""> -->
+
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -17,7 +19,7 @@
 
     <script>
         $(document).ready(function () {
-            $.get('http:127.0.0.1:8000/api/order')
+            $.get('http://127.0.0.1:8000/api/order')
                 .then((result) => {
                     console.log('Order Result');
                     console.log(result);
@@ -26,11 +28,27 @@
                         $('#content').append(`
                         <tr>                            
                             <td>${content.ord_ymd}</td>                            
-                            <td>${content.ord_no}</td>                            
+                            <td>
+                                ${content.ord_no}
+                                <span id='pk' style='display:none;'>${content.id}</span>
+                            </td>                            
                         </tr>
                         `);
                     }
+
+                    $('table > tbody > tr').hover(function () {
+                        $(this).css('cursor', 'pointer');
+                    });
+
+                    $('table > tbody > tr').on('click', function () {
+                        let pk = $(this).children('td:eq(1)').children('span:eq(0)').text();
+                        console.log($(this).children('td:eq(1)').children('span:eq(0)').text());
+                        let moveTo = 'http://127.0.0.1:8000/api/order/move/?pk=' + pk;
+                        location.href = moveTo
+                    });
                 });
+                
+                
             }
         );
     </script>
