--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -7,8 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>order_list > 주문리스트페이지</title>
 
-    <!-- <img src="none" style="cursor: pointer;" alt=""> -->
-
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -46,9 +44,7 @@
                         let moveTo = 'http://127.0.0.1:8000/api/order/move/?pk=' + pk;
                         location.href = moveTo
                     });
-                });
-                
-                
+                });                
             }
         );
     </script>
@@ -62,7 +58,7 @@
         <br>
         <h1 id="productName" class="text-center"></h1>
         <br>
-        <table class="table table-dark table-hover text-center">
+        <table class="table table-hover text-center table-striped">
             <thead>
                 <tr>
                     <!-- <th class="table-light">ID</th> -->
