비밀번호 변경 실패 시 alert창 추가

--- a/templates/change_password.html
+++ b/templates/change_password.html
@@ -37,8 +37,8 @@
                     },
                     error: (result) => {
                         console.log('error > ' + result);
-                        const ret = result.responseJSON;  
-                        
+                        const ret = result.responseJSON;
+                        alert('오류 발생.')                        
                     }
                 });
             } else {
