placeholder 추가, 댓글 최신순 정렬

--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -175,13 +175,11 @@
     <hr>
 
     <div class="container">
-        <textarea class="form-control" name="content" id="content" cols="30" rows="10">
-
-        </textarea>
+        <textarea class="form-control" name="content" id="content" cols="20" rows="10" placeholder="댓글 내용을 입력하세요."></textarea>
 
         <br>
 
-        <input class="form-control" type="text" id="token" name="token">
+        <input class="form-control" type="text" id="token" name="token" placeholder="Access Token을 입력하세요.">
         <label for="token">Access Token Please</label>
         <br>
         <br>
