--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -8,8 +8,6 @@
 
     <title>order_detail > 주문상세페이지</title>
 
-    <!-- <img src="none" style="cursor: pointer;" alt=""> -->
-
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"
         integrity="sha256-pvPw+upLPUjgMXY0G+8O0xUf+/Im1MZjXxxgOcBQBXU=" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -25,18 +23,16 @@
             console.log('pk: ' + pk);
             $('#pk').text(pk);
 
-            $.get('http://127.0.0.1:8000/api/order/' + pk + '/')
+            $.get('http://127.0.0.1:8000/api/order/' + pk)
                 .then((result) => {
-                    $('#ORD_YMD').text(result.ord_ymd);
-                    $('#ACCT_MANG_DBRN_CODE').text(result.acct_mang_dbrn_code);
-                    $('#ORD_NO').text(result.ord_no);
-                    $('#ACCT_NO').text(result.acct_no);
-                    $('#CALLV_TYPE_CODE').text(result.callv_type_code);
-                    $('#SELL_BUY_TP_CODE').text(result.sell_buy_tp_code);
-                    $('#STBD_CODE').text(result.stbd_code);
-                    $('#ORD_QTY').text(result.ord_qty);
-                    $('#ORD_UV').text(result.ord_uv);
-                    $('#MRGN_BASE_UV').text(result.mrgn_base_uv);
+                    console.log('#####')
+                    console.log(result);
+
+                    const keys = Object.keys(result);
+                    for (let i = 0; i < keys.length; i++) {
+                        let key = keys[i];
+                        $('#' + key.toUpperCase().trim()).text(result[key]);
+                    }
                 });
 
             $('#writecomment').on('click', function () {
@@ -50,7 +46,7 @@
             $('#comment_area').empty();
             $.ajax({
                 type: 'GET',
-                url: 'http://127.0.0.1:8000/api/order/' + $('#pk').text() + '/comments/',            
+                url: 'http://127.0.0.1:8000/api/order/' + $('#pk').text() + '/comments',            
                 success: (result) => {
                     for (let i = 0; i < result.results.length; i++) {
                             const item = result.results[i];
@@ -61,20 +57,17 @@
                                 <td>${item.id}</td>                            
                                 <td>${item.writer}</td>
                                 <td>${item.created}</td>
-                                <td>${item.content} <button type='button' class='btn btn-sm btn-danger' data-bs-toggle='modal' data-bs-target='#staticBackdrop'>댓글삭제</button></td>                            
+                                <td>${item.content} <div class='d-flex flex-row-reverse' style='display: inline-block;'><button type='button' class='btn btn-sm btn-danger' data-bs-toggle='modal' data-bs-target='#staticBackdrop'>댓글삭제</button></div></td>                            
                             </tr>
                             `);
                     }
                     $('.btn-danger').on('click', function () {
                         console.log('deletemodalbtn')
-                        const writer = $(this).parent().parent().children('td:eq(1)').text();
+                        const writer = $(this).parent().parent().parent().children('td:eq(1)').text();
                         $('#writer2').text(writer);
-                        const commentid = $(this).parent().parent().children('td:eq(0)').text();
+                        const commentid = $(this).parent().parent().parent().children('td:eq(0)').text();
                         $('#commentid').attr('value', commentid);
-                    });
-                    $('#deletecommentbtn').on('click', () => {
-                        deleteComment();
-                    });
+                    });                    
                 }, 
                 error: (result) => {
                     console.error(result.error)
@@ -85,8 +78,7 @@
         const submitComment = function () {
             $.ajax({
                 type: 'POST',
-                url: 'http://127.0.0.1:8000/api/order/' + $('#pk').text() +'/comment/',
-
+                url: 'http://127.0.0.1:8000/api/order/comment',
                 data: {
                     order: $('#pk').text(),
                     content: $('#content').val().trim()
@@ -107,10 +99,6 @@
                 }
             });
         }
-    </script>
-
-    <script>
-        
     </script>
 </head>
 
@@ -134,23 +122,23 @@
                     <tbody>
                         <tr>
                             <th scope="row">ORD_YMD</th>
-                            <td id="ORD_YMD">Mark</td>
+                            <td id="ORD_YMD"></td>
                         </tr>
                         <tr>
                             <th scope="row">ACCT_MANG_DBRN_CODE</th>
-                            <td id="ACCT_MANG_DBRN_CODE">Mark</td>
+                            <td id="ACCT_MANG_DBRN_CODE"></td>
                         </tr>
                         <tr>
                             <th scope="row">ORD_NO</th>
-                            <td id="ORD_NO">Jacob</td>
+                            <td id="ORD_NO"></td>
                         </tr>
                         <tr>
                             <th scope="row">ACCT_NO</th>
-                            <td id="ACCT_NO">Larry</td>
+                            <td id="ACCT_NO"></td>
                         </tr>
                         <tr>
                             <th scope="row">CALLV_TYPE_CODE</th>
-                            <td id="CALLV_TYPE_CODE">Larry</td>
+                            <td id="CALLV_TYPE_CODE"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -158,28 +146,27 @@
 
             <div class="col">
                 <table class="table">
-                    <thead>
-                    </thead>
+                    <thead></thead>
                     <tbody>
                         <tr>
                             <th scope="row">SELL_BUY_TP_CODE</th>
-                            <td id="SELL_BUY_TP_CODE">Mark</td>
+                            <td id="SELL_BUY_TP_CODE"></td>
                         </tr>
                         <tr>
                             <th scope="row">STBD_CODE</th>
-                            <td id="STBD_CODE">Jacob</td>
+                            <td id="STBD_CODE"></td>
                         </tr>
                         <tr>
                             <th scope="row">ORD_QTY</th>
-                            <td id="ORD_QTY">Larry</td>
+                            <td id="ORD_QTY"></td>
                         </tr>
                         <tr>
                             <th scope="row">ORD_UV</th>
-                            <td id="ORD_UV">Larry</td>
+                            <td id="ORD_UV"></td>
                         </tr>
                         <tr>
                             <th scope="row">MRGN_BASE_UV</th>
-                            <td id="MRGN_BASE_UV">Larry</td>
+                            <td id="MRGN_BASE_UV"></td>
                         </tr>
                     </tbody>
                 </table>
@@ -212,8 +199,7 @@
                     <th>내용</th>
                 </tr>
             </thead>
-            <tbody id="comment_area">
-            </tbody>
+            <tbody id="comment_area"></tbody>
         </table>
     </div>
 
@@ -245,24 +231,23 @@
     <script>
         $(document).ready(function () {
             loadComment();
+            $('#deletecommentbtn').on('click', deleteComment);
         });
         
         const deleteComment = function () {
             $.ajax({
                 type: 'DELETE',
-                url: 'http://127.0.0.1:8000/api/order/' + $('#pk').text() + '/comment/' + $('#commentid').val() + '/', 
+                url: 'http://127.0.0.1:8000/api/order/comment/' + $('#commentid').val(), 
                 beforeSend: function (xhr) {
                     xhr.setRequestHeader('Authorization', 'JWT ' + $('#deletetoken').val());
                 }
             }).done(function (result) {
-                console.log('!!!!');
-                alert('삭제 완료');
-                console.dir(result)
                 $('#staticBackdrop').modal('hide');
+                alert('삭제 완료.');               
                 loadComment();
             }).fail(function (result) {
-                alert('오류 발생.')
                 $('#staticBackdrop').modal('hide');
+                alert('오류 발생.')
             })
         }
     </script>
