--- a/templates/order_list.html
+++ b/templates/order_list.html
@@ -41,7 +41,7 @@
                     $('table > tbody > tr').on('click', function () {
                         let pk = $(this).children('td:eq(1)').children('span:eq(0)').text();
                         console.log($(this).children('td:eq(1)').children('span:eq(0)').text());
-                        let moveTo = 'http://127.0.0.1:8000/api/order/move/?pk=' + pk;
+                        let moveTo = 'http://127.0.0.1:8000/api/order/move?pk=' + pk;
                         location.href = moveTo
                     });
                 });                
@@ -55,27 +55,18 @@
     <div class="container">
         <br>
         <h1>주문(Order) 리스트</h1>
+        <h4>* 아래 목록 중 하나를 클릭하면 상세 페이지로 이동됩니다.</h4>
         <br>
         <h1 id="productName" class="text-center"></h1>
         <br>
         <table class="table table-hover text-center table-striped">
             <thead>
                 <tr>
-                    <!-- <th class="table-light">ID</th> -->
                     <th class="table-light">ORD_YMD (주문일자)</th>
-                    <!-- <th class="table-light">ACCT_MANG_DBRN_CODE</th> -->
                     <th class="table-light">ORD_NO (주문번호)</th>
-                    <!-- <th class="table-light">ACCT_NO</th>
-                    <th class="table-light">CALLV_TYPE_CODE</th>
-                    <th class="table-light">SELL_BUY_TP_CODE</th>
-                    <th class="table-light">STBD_CODE</th>
-                    <th class="table-light">ORD_QTY</th>
-                    <th class="table-light">ORD_UV</th>
-                    <th class="table-light">MRGN_BASE_UV</th> -->
                 </tr>
             </thead>
             <tbody id="content">
-
             </tbody>
         </table>
     </div>
