좋아요 버튼 구현 중...

--- a/templates/order_detail.html
+++ b/templates/order_detail.html
@@ -197,6 +197,7 @@
                     <th>작성자</th>
                     <th>작성일시</th>
                     <th>내용</th>
+                    <th>좋아요</th>
                 </tr>
             </thead>
             <tbody id="comment_area"></tbody>
